--- a/fifth.html
+++ b/fifth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cockandballs</title>
+        <title>5.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
         <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\fifth.css" />
