--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cockandballs</title>
+        <title>Tests</title>
 
         <!-- should probably link the page's stylesheet -->
         <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\style.css" />
