--- a/fifth.html
+++ b/fifth.html
@@ -4,7 +4,7 @@
         <title>5.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
-        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\fifth.css" />
+        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\cannotbeme.github.io\fifth.css" />
     </head>
     <body>
 
