--- a/fourth.html
+++ b/fourth.html
@@ -4,7 +4,7 @@
         <title>4.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
-        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\fourth.css" />
+        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\cannotbeme.github.io\fourth.css" />
     </head>
     <body>
 
