--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tests</title>
 
         <!-- should probably link the page's stylesheet -->
-        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\style.css" />
+        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\cannotbeme.github.io\style.css" />
     </head>
     <body>
 
