--- a/sixth.html
+++ b/sixth.html
@@ -4,7 +4,7 @@
         <title>6.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
-        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\something\sixth.css" />
+        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\cannotbeme.github.io\sixth.css" />
     </head>
     <body>
 
