--- a/fifth.html
+++ b/fifth.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='utf-8'/>
+        <meta name='viewport' content='width=device-width, intial-scale=1.0'/>
+
         <title>5.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
