--- a/fifth.html
+++ b/fifth.html
@@ -7,7 +7,7 @@
         <title>5.Klasse</title>
 
         <!-- should probably link the page's stylesheet -->
-        <link rel="stylesheet" href="C:\Users\lmich\OneDrive\Dokumente\GitHub\cannotbeme.github.io\fifth.css" />
+        <link rel="stylesheet" href="fifth.css" />
     </head>
     <body>
 
@@ -15,7 +15,7 @@
         
         <!-- navigation bar -->
         <ul id='navbar'>
-            <li><a href='fourth.html'>4.Klasse</a></li>
+            <li><a href='index.html'>4.Klasse</a></li>
             <li><a href='fifth.html'>5.Klasse</a></li>
             <li><a href='sixth.html'>6.Klasse</a></li>
         </ul>
