--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'/>
         <meta name='viewport' content='width=device-width, intial-scale=1.0'/>
-        
+
         <title>Tests</title>
 
         <!-- should probably link the page's stylesheet -->
@@ -15,7 +15,7 @@
         
         <!-- navigation bar -->
         <ul id='navbar'>
-            <li><a href='fourth.html'>4.Klasse</a></li>
+            <li><a href='index.html'>4.Klasse</a></li>
             <li><a href='fifth.html'>5.Klasse</a></li>
             <li><a href='sixth.html'>6.Klasse</a></li>
         </ul>
