--- a/fifth.html
+++ b/fifth.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'/>
         <meta name='viewport' content='width=device-width, intial-scale=1.0'/>
 
-        <title>5.Klasse</title>
+        <title>Tests</title>
 
         <!-- should probably link the page's stylesheet -->
         <link rel="stylesheet" href="fifth.css" />
