--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <h1> Title </h1>
         
         <!-- navigation bar -->
-        <ul id='navbar'>
-            <li><a href='index.html'>4.Klasse</a></li>
-            <li><a href='fifth.html'>5.Klasse</a></li>
-            <li><a href='sixth.html'>6.Klasse</a></li>
-        </ul>
+        <div calss='navbar'>
+            <ul id='navbar'>
+                <li><a href='index.html'>4.Klasse</a></li>
+                <li><a href='fifth.html'>5.Klasse</a></li>
+                <li><a href='sixth.html'>6.Klasse</a></li>
+            </ul>
+        </div>
 
     </body>
 </html>
