--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'/>
-        <meta name='viewport' content='width=device-width, intial-scale=1.0'/>
+        <meta name='viewport' content="width=device-width, initial-scale=1.0"/>
 
         <title>Tests</title>
 
@@ -14,7 +14,7 @@
         <h1> Title </h1>
         
         <!-- navigation bar -->
-        <div calss='navbar'>
+        <div class='navbar'>
             <ul id='navbar'>
                 <li><a href='index.html'>4.Klasse</a></li>
                 <li><a href='fifth.html'>5.Klasse</a></li>
