--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </div>
 
         <button type='button' id="Testt" href="/Exams/Biglion.pdf" download>Biglion</button>
-        <a id="Test" href="/Exams/Biglion.pdf" download>Biglion#2</a>
+        <a id="Testt" href="/Exams/Biglion.pdf" download>Biglion#2</a>
+        <img id="Test" src="/Exams/Biglion.pdf" href="/Exams/Biglion.pdf" download>
 
         <script src="index.js"></script>
     </body>
