--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
         <button type='button' id="Testt" href="/Exams/Biglion.pdf" download>Biglion</button>
         <a id="Testt" href="/Exams/Biglion.pdf" download>Biglion#2</a>
-        <img id="Test" src="/Exams/Biglion.pdf" href="/Exams/Biglion.pdf" download>
+        <img id="Test" src="/Exams/Biglion.jpg" alt="Biglion">
+        <a id="Test" href="/Exams/Biglion.jpg" download>download</a>
 
         <script src="index.js"></script>
     </body>
